# my_jackal

./: README.md
cnoid_jackal_bringup/: CMakeLists.txt  package.xml
cnoid_jackal_bringup/launch/: husky.launch  jackal.launch
cnoid_jackal_bringup/project/: ROS-Husky.cnoid  ROS-Jackal.cnoid
cnoid_jackal_bringup/src/: CMakeLists.txt  ROSHuskyController.cpp  ROSJackalController.cpp
joy2jackal/: CMakeLists.txt  package.xml
joy2jackal/src/: joy2jackal_node.cpp
launch/: husky.launch  jackal.launch
my_jackal/: CMakeLists.txt  package.xml
my_jackal/project/: jackal.cnoid
my_jackal/src/: CMakeLists.txt  HuskyDriveController.cpp
project/: husky.cnoid
src/: JackalDriveController.cpp
